reformat code and divide classes in packages

--- a/v_regular/Mocket/app/src/main/res/layout/activity_change_password.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/activity_change_password.xml
@@ -4,31 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#efefef"
     android:orientation="vertical"
-    tools:context=".ChangePasswordActivity"
-    android:background="#efefef">
+    tools:context=".activities.ChangePasswordActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/CHANGEPASSWORD_toolbar"
-        android:minHeight="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        app:titleTextColor="@color/mocket_dark_purple"
         android:background="?attr/colorPrimary"
-        >
+        android:minHeight="?attr/actionBarSize"
+        app:titleTextColor="@color/mocket_dark_purple">
 
         <ImageView
             android:layout_width="35dp"
             android:layout_height="match_parent"
-            android:src="@drawable/logo"/>
+            android:src="@drawable/logo" />
+
         <TextView
             android:layout_width="180dp"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:textSize="22dp"
             android:text="Change Password"
-            android:textStyle="bold"
-            android:textColor="@color/mocket_dark_purple"/>
+            android:textColor="@color/mocket_dark_purple"
+            android:textSize="22dp"
+            android:textStyle="bold" />
 
     </android.support.v7.widget.Toolbar>
 
@@ -36,35 +36,35 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp">
+        android:layout_marginTop="10dp"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="260dp"
-            android:orientation="vertical"
-            android:background="@drawable/border_shadow">
+            android:background="@drawable/border_shadow"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="20dp"
+                android:orientation="vertical"
                 android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:orientation="vertical">
+                android:paddingRight="20dp">
 
                 <TextView
                     android:id="@+id/CHANGEPASSWORD_textView_passwordRule"
-                    android:paddingLeft="20dp"
-                    android:paddingBottom="10dp"
-                    android:text="Password should \n- be at least 8 digits long.\n- contain at least 1 uppercase."
-                    android:textSize="15dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="#000000"/>
+                    android:paddingBottom="10dp"
+                    android:paddingLeft="20dp"
+                    android:text="Password should \n- be at least 8 digits long.\n- contain at least 1 uppercase."
+                    android:textColor="#000000"
+                    android:textSize="15dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -76,34 +76,34 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:layout_weight="0.5"/>
+                        android:layout_weight="0.5"
+                        android:orientation="vertical" />
 
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:layout_weight="9">
+                        android:layout_weight="9"
+                        android:orientation="vertical">
 
                         <EditText
                             android:id="@+id/CHANGEPASSWORD_editText_password1"
-                            android:layout_below="@id/CHANGEPASSWORD_textView_passwordRule"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
-                            android:paddingLeft="20dp"
-                            android:paddingRight="20dp"
+                            android:layout_below="@id/CHANGEPASSWORD_textView_passwordRule"
                             android:hint="Password"
-                            android:inputType="textPassword"/>
+                            android:inputType="textPassword"
+                            android:paddingLeft="20dp"
+                            android:paddingRight="20dp" />
 
                         <EditText
                             android:id="@+id/CHANGEPASSWORD_editText_password2"
-                            android:layout_below="@id/CHANGEPASSWORD_editText_password1"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
-                            android:paddingLeft="20dp"
-                            android:paddingRight="20dp"
+                            android:layout_below="@id/CHANGEPASSWORD_editText_password1"
                             android:hint="Confirm password"
-                            android:inputType="textPassword"/>
+                            android:inputType="textPassword"
+                            android:paddingLeft="20dp"
+                            android:paddingRight="20dp" />
 
 
                         <LinearLayout
@@ -113,28 +113,29 @@
                             android:weightSum="10">
 
                             <LinearLayout
-                                android:layout_weight="6"
                                 android:layout_width="0dp"
                                 android:layout_height="50dp"
+                                android:layout_weight="6"
                                 android:orientation="horizontal"></LinearLayout>
+
                             <Button
                                 android:id="@+id/CHANGEPASSWORD_button_change"
-                                android:layout_weight="4"
-                                android:paddingTop="10dp"
-                                android:text="Change"
-                                android:onClick="changePassword"
-                                android:layout_below="@id/CHANGEPASSWORD_editText_password2"
                                 android:layout_width="0dp"
                                 android:layout_height="50dp"
-                                android:textColor="@color/mocket_dark_purple"/>
+                                android:layout_below="@id/CHANGEPASSWORD_editText_password2"
+                                android:layout_weight="4"
+                                android:onClick="changePassword"
+                                android:paddingTop="10dp"
+                                android:text="Change"
+                                android:textColor="@color/mocket_dark_purple" />
                         </LinearLayout>
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:layout_weight="0.5"/>
+                        android:layout_weight="0.5"
+                        android:orientation="vertical" />
 
                 </LinearLayout>
 
@@ -158,10 +159,6 @@
 
 
     </LinearLayout>
-
-
-
-
 
 
 </LinearLayout>
