--- a/v_regular/Mocket/app/src/main/res/layout/activity_edit_profile.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/activity_edit_profile.xml
@@ -4,32 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#efefef"
     android:orientation="vertical"
-    tools:context=".EditProfileActivity"
-    android:background="#efefef">
+    tools:context=".activities.EditProfileActivity">
 
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/EDITPROFILE_toolbar"
-        android:minHeight="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        app:titleTextColor="@color/mocket_dark_purple"
         android:background="?attr/colorPrimary"
-        >
+        android:minHeight="?attr/actionBarSize"
+        app:titleTextColor="@color/mocket_dark_purple">
 
         <ImageView
             android:layout_width="35dp"
             android:layout_height="match_parent"
-            android:src="@drawable/logo"/>
+            android:src="@drawable/logo" />
+
         <TextView
             android:layout_width="150dp"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:textSize="22dp"
             android:text="Edit Profile"
-            android:textStyle="bold"
-            android:textColor="@color/mocket_dark_purple"/>
+            android:textColor="@color/mocket_dark_purple"
+            android:textSize="22dp"
+            android:textStyle="bold" />
 
     </android.support.v7.widget.Toolbar>
 
@@ -46,27 +46,27 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginBottom="10dp">
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:background="@drawable/border_shadow">
+                    android:background="@drawable/border_shadow"
+                    android:orientation="vertical">
 
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="20dp"
                         android:layout_marginLeft="20dp"
                         android:layout_marginRight="20dp"
-                        android:layout_marginBottom="20dp"
+                        android:layout_marginTop="20dp"
+                        android:orientation="horizontal"
                         android:weightSum="10">
 
                         <LinearLayout
@@ -81,30 +81,29 @@
                                 android:orientation="horizontal">
 
                                 <!-- Profile Image -->
-                                <de.hdodenhof.circleimageview.CircleImageView
-                                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                                     android:id="@+id/EDITPROFILE_imageView_profile"
                                     android:layout_width="100dp"
                                     android:layout_height="100dp"
                                     android:layout_centerHorizontal="true"
                                     android:layout_centerVertical="true"
+                                    android:onClick="addProfileImage"
                                     android:src="@drawable/add_image"
                                     app:civ_border_color="@color/mocket_dark_purple"
-                                    app:civ_border_width="2dp"
-                                    android:onClick="addProfileImage"/>
+                                    app:civ_border_width="2dp" />
 
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="120dp"
-                                    android:paddingLeft="20dp"
-                                    android:orientation="vertical">
+                                    android:orientation="vertical"
+                                    android:paddingLeft="20dp">
 
                                     <EditText
                                         android:id="@+id/EDITPROFILE_editText_firstName"
                                         android:layout_width="match_parent"
                                         android:layout_height="50dp"
                                         android:hint="First Name"
-                                        android:textAlignment="center"/>
+                                        android:textAlignment="center" />
 
 
                                     <EditText
@@ -112,7 +111,7 @@
                                         android:layout_width="match_parent"
                                         android:layout_height="50dp"
                                         android:hint="Last Name"
-                                        android:textAlignment="center"/>
+                                        android:textAlignment="center" />
 
                                 </LinearLayout>
 
@@ -134,10 +133,10 @@
                                         android:id="@+id/EDITPROFILE_editText_email"
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent"
-                                        android:paddingLeft="30dp"
-                                        android:paddingRight="30dp"
                                         android:hint="Email address"
-                                        android:inputType="textEmailAddress" />
+                                        android:inputType="textEmailAddress"
+                                        android:paddingLeft="30dp"
+                                        android:paddingRight="30dp" />
 
                                 </LinearLayout>
 
@@ -146,7 +145,7 @@
                                     android:layout_height="30dp"
                                     android:paddingLeft="10dp"
                                     android:text="Email address cannot be changed."
-                                    android:textColor="#000000"/>
+                                    android:textColor="#000000" />
 
                                 <LinearLayout
                                     android:layout_width="match_parent"
@@ -157,16 +156,16 @@
                                     <LinearLayout
                                         android:layout_width="0dp"
                                         android:layout_height="match_parent"
-                                        android:layout_weight="7"/>
+                                        android:layout_weight="7" />
 
                                     <Button
                                         android:id="@+id/EDITPROFILE_button_save"
                                         android:layout_width="0dp"
                                         android:layout_height="match_parent"
-                                        android:text="Save"
                                         android:layout_weight="3"
                                         android:onClick="saveProfile"
-                                        android:textColor="@color/mocket_dark_purple"/>
+                                        android:text="Save"
+                                        android:textColor="@color/mocket_dark_purple" />
 
                                 </LinearLayout>
 
@@ -174,19 +173,19 @@
 
                             <TextView
                                 android:id="@+id/EDITPROFILE_textView_passwordRule"
-                                android:paddingLeft="20dp"
-                                android:paddingBottom="10dp"
-                                android:text="Password should \n- be at least 8 digits long.\n- contain at least 1 uppercase."
-                                android:textSize="15dp"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:textColor="#000000"/>
+                                android:paddingBottom="10dp"
+                                android:paddingLeft="20dp"
+                                android:text="Password should \n- be at least 8 digits long.\n- contain at least 1 uppercase."
+                                android:textColor="#000000"
+                                android:textSize="15dp" />
 
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="200dp"
-                                android:layout_marginRight="20dp"
                                 android:layout_marginLeft="20dp"
+                                android:layout_marginRight="20dp"
                                 android:orientation="vertical">
 
                                 <LinearLayout
@@ -204,21 +203,21 @@
                                         <LinearLayout
                                             android:layout_width="0dp"
                                             android:layout_height="match_parent"
-                                            android:layout_weight="0.5"/>
+                                            android:layout_weight="0.5" />
 
                                         <EditText
                                             android:id="@+id/EDITPROFILE_editText_currentPassword"
                                             android:layout_width="0dp"
                                             android:layout_height="match_parent"
-                                            android:paddingLeft="20dp"
+                                            android:layout_weight="9"
                                             android:hint="Current Password"
                                             android:inputType="textPassword"
-                                            android:layout_weight="9"/>
+                                            android:paddingLeft="20dp" />
 
                                         <LinearLayout
                                             android:layout_width="0dp"
                                             android:layout_height="match_parent"
-                                            android:layout_weight="0.5"/>
+                                            android:layout_weight="0.5" />
 
                                     </LinearLayout>
 
@@ -233,21 +232,21 @@
                                     <LinearLayout
                                         android:layout_width="0dp"
                                         android:layout_height="match_parent"
-                                        android:layout_weight="0.5"/>
+                                        android:layout_weight="0.5" />
 
                                     <EditText
                                         android:id="@+id/EDITPROFILE_editText_password1"
                                         android:layout_width="0dp"
                                         android:layout_height="match_parent"
-                                        android:paddingLeft="20dp"
+                                        android:layout_weight="9"
                                         android:hint="New Password"
                                         android:inputType="textPassword"
-                                        android:layout_weight="9"/>
+                                        android:paddingLeft="20dp" />
 
                                     <LinearLayout
                                         android:layout_width="0dp"
                                         android:layout_height="match_parent"
-                                        android:layout_weight="0.5"/>
+                                        android:layout_weight="0.5" />
 
                                 </LinearLayout>
 
@@ -260,21 +259,21 @@
                                     <LinearLayout
                                         android:layout_width="0dp"
                                         android:layout_height="match_parent"
-                                        android:layout_weight="0.5"/>
+                                        android:layout_weight="0.5" />
 
                                     <EditText
                                         android:id="@+id/EDITPROFILE_editText_password2"
                                         android:layout_width="0dp"
                                         android:layout_height="match_parent"
-                                        android:paddingLeft="20dp"
+                                        android:layout_weight="9"
                                         android:hint="Confirm New Password"
                                         android:inputType="textPassword"
-                                        android:layout_weight="9"/>
+                                        android:paddingLeft="20dp" />
 
                                     <LinearLayout
                                         android:layout_width="0dp"
                                         android:layout_height="match_parent"
-                                        android:layout_weight="0.5"/>
+                                        android:layout_weight="0.5" />
 
                                 </LinearLayout>
 
@@ -288,15 +287,15 @@
                                     <LinearLayout
                                         android:layout_width="0dp"
                                         android:layout_height="match_parent"
-                                        android:layout_weight="7"/>
+                                        android:layout_weight="7" />
 
                                     <Button
                                         android:layout_width="0dp"
                                         android:layout_height="match_parent"
-                                        android:text="Change"
                                         android:layout_weight="3"
                                         android:onClick="changePassword"
-                                        android:textColor="@color/mocket_dark_purple"/>
+                                        android:text="Change"
+                                        android:textColor="@color/mocket_dark_purple" />
 
                                 </LinearLayout>
 
@@ -312,19 +311,19 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
+                android:layout_marginBottom="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginBottom="10dp"
                 android:text="Log Out" />
 
             <Button
                 android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginBottom="30dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginBottom="30dp"
-                android:layout_height="60dp"
                 android:backgroundTint="@android:color/holo_red_light"
-                android:text="Delete Account"/>
+                android:text="Delete Account" />
 
         </LinearLayout>
     </ScrollView>
