--- a/v_regular/Mocket/app/src/main/res/layout/activity_forgot_password.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/activity_forgot_password.xml
@@ -1,71 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".ForgotPasswordActivity"
-        android:background="#efefef">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#efefef"
+    android:orientation="vertical"
+    tools:context=".activities.ForgotPasswordActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/FORGOTPASSWORD_toolbar"
-        android:minHeight="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        app:titleTextColor="@color/mocket_dark_purple"
         android:background="?attr/colorPrimary"
-        >
+        android:minHeight="?attr/actionBarSize"
+        app:titleTextColor="@color/mocket_dark_purple">
 
         <ImageView
             android:layout_width="35dp"
             android:layout_height="match_parent"
-            android:src="@drawable/logo"/>
+            android:src="@drawable/logo" />
+
         <TextView
             android:layout_width="180dp"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:textSize="22dp"
             android:text="Forgot Password"
-            android:textStyle="bold"
-            android:textColor="@color/mocket_dark_purple"/>
+            android:textColor="@color/mocket_dark_purple"
+            android:textSize="22dp"
+            android:textStyle="bold" />
 
     </android.support.v7.widget.Toolbar>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp">
+        android:layout_marginTop="10dp"
+        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/FORGOTPASSWORD_sendLayout"
             android:layout_width="match_parent"
             android:layout_height="120dp"
-            android:orientation="vertical"
-            android:background="@drawable/border_shadow">
+            android:background="@drawable/border_shadow"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:orientation="horizontal"
-                android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal"
                 android:weightSum="10">
 
                 <EditText
                     android:id="@+id/FORGOTPASSWORD_editText_verifyEmail"
-                    android:inputType="textEmailAddress"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="7.5"
-                    android:paddingLeft="20dp"
-                    android:hint="Email address" />
+                    android:hint="Email address"
+                    android:inputType="textEmailAddress"
+                    android:paddingLeft="20dp" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -77,23 +77,22 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="2"
-                    android:text="Send"
                     android:onClick="sendVerificationCode"
-                    android:textColor="@color/mocket_dark_purple"/>
-
+                    android:text="Send"
+                    android:textColor="@color/mocket_dark_purple" />
 
 
             </LinearLayout>
 
             <TextView
+                android:id="@+id/FORGOTPASSWORD_textView_verify"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:id="@+id/FORGOTPASSWORD_textView_verify"
-                android:textSize="15dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:text="Verification code will be sent to your Email address."
-                android:textColor="#000000" />
+                android:textColor="#000000"
+                android:textSize="15dp" />
 
 
         </LinearLayout>
@@ -102,30 +101,28 @@
             android:id="@+id/FORGOTPASSWORD_verifyLayout"
             android:layout_width="match_parent"
             android:layout_height="120dp"
-            android:orientation="vertical"
             android:layout_marginTop="10dp"
             android:background="@drawable/border_shadow"
-            android:visibility="invisible"
-            >
+            android:orientation="vertical"
+            android:visibility="invisible">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:orientation="horizontal"
-                android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal"
                 android:weightSum="10">
 
                 <EditText
                     android:id="@+id/FORGOTPASSWORD_editText_verificationCode"
-                    android:inputType="textEmailAddress"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="6"
-                    android:textAlignment="center"
                     android:hint="Verification code"
-                    />
+                    android:inputType="textEmailAddress"
+                    android:textAlignment="center" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -137,22 +134,22 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="3"
-                    android:text="Verify"
                     android:onClick="verifyCode"
+                    android:text="Verify"
                     android:textColor="@color/mocket_dark_purple" />
 
 
             </LinearLayout>
 
             <TextView
+                android:id="@+id/FORGOTPASSWORD_textView_timeLeft"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:id="@+id/FORGOTPASSWORD_textView_timeLeft"
-                android:textAlignment="center"
-                android:textSize="15dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:textColor="#000000" />
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="15dp" />
 
         </LinearLayout>
     </LinearLayout>
