--- a/v_regular/Mocket/app/src/main/res/layout/activity_main.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/activity_main.xml
@@ -4,32 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#efefef"
     android:orientation="vertical"
-    tools:context=".MainActivity"
-    android:background="#efefef">
+    tools:context=".activities.MainActivity">
 
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        android:minHeight="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        app:titleTextColor="@color/mocket_dark_purple"
         android:background="?attr/colorPrimary"
-        >
+        android:minHeight="?attr/actionBarSize"
+        app:titleTextColor="@color/mocket_dark_purple">
 
         <ImageView
             android:layout_width="35dp"
             android:layout_height="match_parent"
-            android:src="@drawable/logo"/>
+            android:src="@drawable/logo" />
+
         <TextView
             android:layout_width="90dp"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:textSize="22dp"
             android:text="Mocket"
-            android:textStyle="bold"
-            android:textColor="@color/mocket_dark_purple"/>
+            android:textColor="@color/mocket_dark_purple"
+            android:textSize="22dp"
+            android:textStyle="bold" />
 
     </android.support.v7.widget.Toolbar>
 
@@ -41,9 +41,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:background="@color/background_category"
             android:orientation="horizontal"
-            android:weightSum="4"
-            android:background="@color/background_category">
+            android:weightSum="4">
 
             <RelativeLayout
                 android:id="@+id/MAIN_relativeLayout_memory"
@@ -53,6 +53,7 @@
                 android:background="@drawable/bottom_border"
                 android:clickable="true"
                 android:onClick="categoryClicked">
+
                 <ImageView
                     android:id="@+id/MAIN_imageView_memory"
                     android:layout_width="50dp"
@@ -69,6 +70,7 @@
                 android:background="?attr/selectableItemBackground"
                 android:clickable="true"
                 android:onClick="categoryClicked">
+
                 <ImageView
                     android:id="@+id/MAIN_imageView_quiz"
                     android:layout_width="50dp"
@@ -85,6 +87,7 @@
                 android:background="?attr/selectableItemBackground"
                 android:clickable="true"
                 android:onClick="categoryClicked">
+
                 <ImageView
                     android:id="@+id/MAIN_imageView_graph"
                     android:layout_width="50dp"
@@ -101,6 +104,7 @@
                 android:background="?attr/selectableItemBackground"
                 android:clickable="true"
                 android:onClick="categoryClicked">
+
                 <ImageView
                     android:id="@+id/MAIN_imageView_more"
                     android:layout_width="50dp"
@@ -114,8 +118,7 @@
         <FrameLayout
             android:id="@+id/MAIN_frameLayout_content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </FrameLayout>
+            android:layout_height="match_parent"></FrameLayout>
     </LinearLayout>
 
 
