--- a/v_regular/Mocket/app/src/main/res/layout/activity_quiz.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/activity_quiz.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".QuizActivity">
+    tools:context=".activities.QuizActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,75 +17,77 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="4"
-            android:background="#00ffffff"/>
-
+            android:background="#00ffffff" />
 
 
         <com.wajahatkarim3.easyflipview.EasyFlipView
+            android:id="@+id/QUIZGAME_easyFlipView_card"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="6"
-            android:orientation="vertical"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
-            android:id="@+id/QUIZGAME_easyFlipView_card"
+            android:layout_weight="6"
             android:background="@android:color/transparent"
-            app:flipOnTouch="true"
+            android:orientation="vertical"
             app:flipDuration="500"
-            app:flipEnabled="true">
+            app:flipEnabled="true"
+            app:flipOnTouch="true">
 
 
             <!-- Back -->
             <LinearLayout
+                android:id="@+id/QUIZGAME_linearLayout_card_back"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:weightSum="20"
-                android:id="@+id/QUIZGAME_linearLayout_card_back"
                 android:background="@drawable/border_shadow_game"
                 android:clickable="false"
-                >
+                android:orientation="vertical"
+                android:weightSum="20">
 
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:background="@android:color/transparent" />
+
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="0dp"
                     android:layout_weight="2"
+                    android:background="@android:color/transparent"
                     android:orientation="horizontal"
-                    android:weightSum="20"
-                    android:background="@android:color/transparent">
+                    android:weightSum="20">
 
 
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
                         android:layout_gravity="center"
+                        android:layout_weight="1"
                         android:background="@android:color/transparent" />
+
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="3"
+                        android:background="@android:color/transparent"
                         android:text="Added: "
                         android:textAlignment="textEnd"
-                        android:textStyle="bold"
+                        android:textColor="#000000"
                         android:textSize="13dp"
-                        android:background="@android:color/transparent"
-                        android:textColor="#000000"/>
+                        android:textStyle="bold" />
+
                     <TextView
                         android:id="@+id/QUIZGAME_textView_added"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="4"
+                        android:background="@android:color/transparent"
                         android:text="07/04/18"
                         android:textAlignment="textStart"
-                        android:textSize="13dp"
-                        android:background="@android:color/transparent"
-                        android:textColor="@color/mocket_dark_purple"/>
+                        android:textColor="@color/mocket_dark_purple"
+                        android:textSize="13dp" />
+
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
@@ -96,23 +98,23 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="5"
+                        android:background="@android:color/transparent"
                         android:text="Last Memory: "
                         android:textAlignment="textEnd"
-                        android:textStyle="bold"
+                        android:textColor="#000000"
                         android:textSize="13dp"
-                        android:background="@android:color/transparent"
-                        android:textColor="#000000"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/QUIZGAME_textView_lastMemory"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="4"
+                        android:background="@android:color/transparent"
                         android:text="07/15/18"
                         android:textAlignment="textStart"
-                        android:textSize="13dp"
-                        android:background="@android:color/transparent"
-                        android:textColor="@color/mocket_dark_purple"/>
+                        android:textColor="@color/mocket_dark_purple"
+                        android:textSize="13dp" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -126,17 +128,17 @@
                     android:layout_width="fill_parent"
                     android:layout_height="0dp"
                     android:layout_weight="12"
+                    android:background="@android:color/transparent"
+                    android:clickable="true"
+                    android:gravity="center"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp"
-                    android:background="@android:color/transparent"
                     android:text="adj. large or heavy and therefore difficult to carry or use"
-                    android:textSize="15dp"
-                    android:textStyle="bold"
                     android:textAlignment="center"
-                    android:gravity="center"
                     android:textColor="#000000"
-                    android:clickable="true"
-                    />
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
+
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="0dp"
@@ -155,12 +157,12 @@
                         android:id="@+id/QUIZGAME_imageView_thumbsDown"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="4"
                         android:layout_gravity="center"
-                        android:src="@drawable/unhappy"
+                        android:layout_weight="4"
                         android:background="@android:color/transparent"
                         android:clickable="true"
-                        android:onClick="thumbsDown"/>
+                        android:onClick="thumbsDown"
+                        android:src="@drawable/unhappy" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -172,12 +174,12 @@
                         android:id="@+id/QUIZGAME_imageView_thumbsUp"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="4"
                         android:layout_gravity="center"
-                        android:src="@drawable/happy"
+                        android:layout_weight="4"
                         android:background="@android:color/transparent"
                         android:clickable="true"
-                        android:onClick="thumbsUp"/>
+                        android:onClick="thumbsUp"
+                        android:src="@drawable/happy" />
 
 
                     <LinearLayout
@@ -186,6 +188,7 @@
                         android:layout_weight="2"
                         android:background="@android:color/transparent" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="0dp"
@@ -197,35 +200,36 @@
 
             <!-- Front -->
             <LinearLayout
+                android:id="@+id/QUIZGAME_linearLayout_card_front"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:weightSum="20"
-                android:id="@+id/QUIZGAME_linearLayout_card_front"
                 android:background="@drawable/border_shadow_game"
-                >
+                android:orientation="vertical"
+                android:weightSum="20">
 
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:background="@android:color/transparent" />
+
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="0dp"
                     android:layout_weight="2"
+                    android:background="@android:color/transparent"
                     android:orientation="horizontal"
-                    android:weightSum="20"
-                    android:background="@android:color/transparent">
+                    android:weightSum="20">
 
 
                     <ImageView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="3"
                         android:layout_gravity="center"
-                        android:src="@drawable/flip"
-                        android:background="@android:color/transparent" />
+                        android:layout_weight="3"
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/flip" />
+
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
@@ -237,12 +241,12 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="4"
-                        android:text="13/8407"
-                        android:textSize="13dp"
                         android:background="@drawable/game_title_bottom_border"
+                        android:paddingTop="3dp"
+                        android:text="13/8407"
                         android:textAlignment="center"
                         android:textColor="@color/mocket_dark_purple"
-                        android:paddingTop="3dp"/>
+                        android:textSize="13dp" />
 
 
                     <LinearLayout
@@ -258,13 +262,13 @@
                     android:layout_height="0dp"
                     android:layout_weight="14"
                     android:background="@android:color/transparent"
-                    android:text="Cumbersome"
-                    android:textStyle="bold"
-                    android:textAlignment="center"
-                    android:textSize="25dp"
                     android:gravity="center"
+                    android:text="Cumbersome"
+                    android:textAlignment="center"
                     android:textColor="#000000"
-                    />
+                    android:textSize="25dp"
+                    android:textStyle="bold" />
+
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="0dp"
@@ -272,7 +276,6 @@
                     android:background="@android:color/transparent" />
 
             </LinearLayout>
-
 
 
         </com.wajahatkarim3.easyflipview.EasyFlipView>
@@ -288,45 +291,45 @@
             android:layout_height="0dp"
             android:layout_weight="1.5"
             android:background="#00ffffff"
-            android:weightSum="10"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="10">
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:background="@android:color/transparent"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:background="@android:color/transparent" />
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="3"
                 android:background="@android:color/transparent"
-                android:textColor="#FDFEFE"
+                android:onClick="goPreviousActivity"
                 android:text="Quit"
-                android:onClick="goPreviousActivity"/>
+                android:textColor="#FDFEFE" />
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:background="@android:color/transparent"
-                android:layout_weight="2"/>
+                android:layout_weight="2"
+                android:background="@android:color/transparent" />
 
             <Button
                 android:id="@+id/QUIZGAME_button_next"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:background="@android:color/transparent"
-                android:textColor="#FDFEFE"
                 android:layout_weight="3"
+                android:background="@android:color/transparent"
                 android:text="Next"
-                android:visibility="invisible"/>
+                android:textColor="#FDFEFE"
+                android:visibility="invisible" />
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:background="@android:color/transparent"
-                android:layout_weight="1.5"/>
+                android:layout_weight="1.5"
+                android:background="@android:color/transparent" />
         </LinearLayout>
 
 
