--- a/v_regular/Mocket/app/src/main/res/layout/fragment_quiz.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/fragment_quiz.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".QuizFragment"
-    android:background="#efefef">
+    android:background="#efefef"
+    tools:context=".fragments.QuizFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -13,53 +13,53 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp">
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:id="@+id/QUIZ_linearLayout_todaysQuiz"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:layout_marginTop="0dp"
                 android:background="@drawable/border_shadow"
-                android:layout_marginTop="0dp">
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
-                    android:layout_marginBottom="5dp"
-                    android:weightSum="10"
-                    android:background="@drawable/title_bottom_border">
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/title_bottom_border"
+                    android:orientation="horizontal"
+                    android:weightSum="10">
 
                     <TextView
                         android:layout_width="0dp"
-                        android:layout_weight="5"
                         android:layout_height="match_parent"
+                        android:layout_weight="5"
                         android:paddingLeft="20dp"
                         android:text="Today's Quiz"
-                        android:textStyle="bold"
                         android:textColor="@color/mocket_dark_purple"
-                        android:textSize="17dp"/>
+                        android:textSize="17dp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/QUIZ_textView_leftTotal"
                         android:layout_width="0dp"
-                        android:layout_weight="5"
-                        android:paddingTop="5dp"
-                        android:paddingRight="10dp"
                         android:layout_height="match_parent"
+                        android:layout_weight="5"
+                        android:paddingRight="10dp"
+                        android:paddingTop="5dp"
                         android:text="243/897 (Left/Total)"
-                        android:textStyle="bold"
                         android:textAlignment="viewEnd"
                         android:textColor="#000000"
-                        android:textSize="14dp"/>
+                        android:textSize="14dp"
+                        android:textStyle="bold" />
 
 
                 </LinearLayout>
@@ -70,16 +70,16 @@
                     android:paddingLeft="35dp"
                     android:text="It contains all terms that should be tested today."
                     android:textColor="#000000"
-                    android:textSize="15dp"/>
+                    android:textSize="15dp" />
 
                 <ImageView
                     android:id="@+id/QUIZ_imageView_start"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
-                    android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:src="@drawable/start_button"
-                    android:clickable="true"/>
+                    android:layout_marginTop="10dp"
+                    android:clickable="true"
+                    android:src="@drawable/start_button" />
 
 
             </LinearLayout>
@@ -88,28 +88,28 @@
                 android:id="@+id/QUIZ_linearLayout_game"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:layout_marginTop="10dp"
                 android:background="@drawable/border_shadow"
-                android:layout_marginTop="10dp">
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="20dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
-                    android:weightSum="10"
-                    android:background="@drawable/title_bottom_border">
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/title_bottom_border"
+                    android:orientation="horizontal"
+                    android:weightSum="10">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:paddingLeft="20dp"
                         android:text="GAME"
-                        android:textStyle="bold"
                         android:textColor="@color/mocket_dark_purple"
-                        android:textSize="17dp"/>
+                        android:textSize="17dp"
+                        android:textStyle="bold" />
 
 
                 </LinearLayout>
@@ -120,16 +120,16 @@
                     android:paddingLeft="35dp"
                     android:text="Play with what you have learend so far."
                     android:textColor="#000000"
-                    android:textSize="15dp"/>
+                    android:textSize="15dp" />
 
                 <ImageView
                     android:id="@+id/QUIZ_imageView_playnow"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
-                    android:layout_marginTop="5dp"
                     android:layout_marginBottom="10dp"
-                    android:src="@drawable/playnow_button"
-                    android:clickable="true"/>
+                    android:layout_marginTop="5dp"
+                    android:clickable="true"
+                    android:src="@drawable/playnow_button" />
 
 
             </LinearLayout>
@@ -137,8 +137,6 @@
         </LinearLayout>
 
     </ScrollView>
-
-
 
 
 </RelativeLayout>
